# AllAnalyses

./: .gitignore  README.md
Cloe/CobaltAnalysis-master/: CharacterisationCoincidence.cc  GainExtract.cc  HV.txt  MergeStat.cc  README.txt  ReadFile.py  RootAnalyzer.cc  RootEventBuilder.C  RootPulsesAnalysis.C  RootPulsesMap.C  Run_Settings_example.txt  calorimeter_fr.txt  mapping_gain_from_amplitude_deriv.root  script_RootAnalyser.sh
Cloe/CobaltAnalysis-master/BackgroundEstimation/: Bdf_comparison.cc  GenerateBdfRun.cc  Subtract_bdf.cc  data_counts_distance.root  merge_counts.cc  merge_profile.cc
Cloe/CobaltAnalysis-master/CFD_study/: CFD_study.cc  run177_coinc_with_19:13_19:15_CFD_15.root  run177_coinc_with_19:13_19:15_CFD_20.root  run177_coinc_with_19:13_19:15_CFD_25.root  run177_coinc_with_19:13_19:15_CFD_30.root  run177_coinc_with_19:13_19:15_CFD_35.root  run177_coinc_with_19:13_19:15_CFD_40.root  run177_coinc_with_19:13_19:15_CFD_45.root  run177_coinc_with_19:13_19:15_CFD_50.root  (+7 more)
Cloe/SNPlot-master/: EventTree.h  ReverseAxis.h  RootDisplay.h  SNPlot.cc  SNPlot.h  python_colors.h
Cloe/SensitivityStudy-master/: CalculateCounts.cc  README.md  T12_graph.cc  diff.txt  efficiency.cc  events.root  file_0_0nubb_Nd_B.txt  file_0_Tl_Nd_B.txt  file_1_Tl_Nd_B.txt  mbb_graph.cc  outputfile.root  script_contaminations_Bi.sh  script_contaminations_NdB.sh  script_contaminations_SeB_opti.sh  script_contaminations_SenoB.sh  script_contaminations_aucun.sh  script_contaminations_cut_Pint_B.sh  script_contaminations_cut_Pint_noB.sh  script_contaminations_cut_vertex_y_B.sh  script_contaminations_cut_vertex_y_noB.sh  script_contaminations_cut_vertex_z_B.sh  script_contaminations_cut_vertex_z_noB.sh
Cloe/TlAnalysis-master/: README.txt
HalfCom_simu_analysis/: README.rst
HalfCom_simu_analysis/trunk/: CMakeLists.txt
HalfCom_simu_analysis/trunk/programs/: hc_analysis_data.cxx  hc_sort_data.cxx
HalfCom_simu_analysis/trunk/resources/commissioning_mapping_example/: hc_layout_1_column.conf  hc_layout_2_columns.conf  hc_layout_geiger.conf
HalfCom_simu_analysis/trunk/scripts/: hc_analyze_data.sh  hc_analyze_data_cclyon.sh  hc_multi_analyze_data_cclyon.sh  hc_multi_sort_data_cclyon.sh  hc_sort_data.sh  hc_sort_data_cclyon.sh
HalfCom_simu_analysis/trunk/source/: data_statistics_simu.cpp  data_statistics_simu.hpp  hc_constants.hpp
MultiHistogram/: MultiHistogram.hpp
NEMO3/CommonModules/: README.txt  README.txt~
NEMO3/CommonModules/NemoMods/: CMakeLists.txt
NEMO3/CommonModules/NemoMods/NemoMods/: AlphaFinder.h  BadPMTStatusInLaserRunTable.h  CaloClusterFinder.h  CutFlowManager.h  ElectronFinder.h  EnergyCorrectionTable.h  GammaFinder.h  LaserTimeCorrectionTable.h  N3DbInterfaceModule.h  NemoCATInterface.h  NemoCalibration.h  NemoDataBaseManager.h  NemorH10InputModule.h  NemorH10LocalTrackingInputMod.h  NemorInputModule.h  RunStatusController.h  RunSummaryTable.h  SqlDate.h
NEMO3/CommonModules/NemoMods/src/: AlphaFinder.cpp  CaloClusterFinder.cpp  CutFlowManager.cpp  ElectronFinder.cpp  GammaFinder.cpp  N3DbInterfaceModule.cpp  NemoCalibration.cpp  NemoDataBaseManager.cpp  NemorH10InputModule.cpp  NemorH10LocalTrackingInputMod.cpp  NemorInputModule.cpp  RunStatusController.cpp  SqlDate.cpp
NEMO3/CommonModules/NemoObjects/: CMakeLists.txt
NEMO3/CommonModules/NemoObjects/NemoObjects/: Alpha.h  AlphaColl.h  CalibCaloHit.h  CalibCaloHitColl.h  Electron.h  ElectronColl.h  Gamma.h  GammaCluster.h  GammaClusterColl.h  GammaColl.h  GammaTrack.h  N3CalorimeterHit.h  N3CalorimeterHitColl.h  N3GeigerHit.h  N3GeigerHitColl.h  N3Track.h  N3TrackColl.h  N3TrackSegment.h  N3TrackSegmentColl.h  N3TrueCalorimeterHit.h  N3TrueCalorimeterHitColl.h  N3TrueGeigerHit.h  N3TrueGeigerHitColl.h  N3TrueParticle.h  N3TrueParticleColl.h  N3TrueVertex.h  N3TrueVertexColl.h  NemorHeader.h  TrackHelix.h  addNemoObjects.h
NEMO3/CommonModules/NemoObjects/dict/: Linkdef.h
NEMO3/CommonModules/NemoObjects/src/: Alpha.cpp  AlphaColl.cpp  CalibCaloHit.cpp  CalibCaloHitColl.cpp  Electron.cpp  ElectronColl.cpp  Gamma.cpp  GammaCluster.cpp  GammaClusterColl.h  GammaColl.cpp  GammaTrack.cpp  N3CalorimeterHit.cpp  N3CalorimeterHitColl.cpp  N3GeigerHit.cpp  N3GeigerHitColl.cpp  N3Track.cpp  N3TrackColl.cpp  N3TrackSegment.cpp  N3TrackSegmentColl.cpp  N3TrueCalorimeterHit.cpp  N3TrueCalorimeterHitColl.cpp  N3TrueGeigerHit.cpp  N3TrueGeigerHitColl.cpp  N3TrueParticle.cpp  N3TrueParticleColl.cpp  N3TrueVertex.cpp  N3TrueVertexColl.cpp  NemorHeader.cpp  TrackHelix.cpp  addNemoObjects.cpp
NEMO3/CommonModules/NemoUtils/: CMakeLists.txt
NEMO3/CommonModules/NemoUtils/NemoUtils/: AngularCorrection.h  RadonWeight.h  SFoilRadonWeight.h  SFoilSide.h  ScintillatorBlocksMapping.h  SectorData.h  SourceType.h
NEMO3/CommonModules/NemoUtils/src/: AngularCorrection.cpp  RadonWeight.cpp  SFoilRadonWeight.cpp  SFoilSide.cpp  ScintillatorBlocksMapping.cpp  SectorData.cpp
NEMO3/Se82_JEM_Analyis/: README.txt
ROOT-tools/: README.rst  TH1Dlog.hh  TH1Flog.hh  TH2Dlog.hh  TH2Flog.hh  THlog-demo.cc
SensitivityStudy/: .gitignore  AnalyseSensitivity.cxx  CMakeLists.txt  Makefile  README.txt  SensitivityModule.conf  SensitivityModule.cpp  SensitivityModule.h  backgroundStudy.cxx  compareTimeDifferencesFeedthroughs.cxx  energyResolution.cxx  feedthroughEfficiency.cxx
TrackerCommissioning/: README.txt
TrackerCommissioning/analysis/: AnalysisPlots.C  AnalysisPlots.h  EventGenerator.C  EventGenerator.h  GHbase.C  GHbase.h  Tracking.C  Tracking.h  makeplots.C  maketracks.C
TrackerCommissioning/ntuplizer/: Anal.C  Anal.h  AutoDict_vector_TEllipse__.cxx  AutoDict_vector_TEllipse___cxx.d  CellGeom.C  CellGeom.h  CellGeom_C.d  DriftModel.cc  EasyTrack.C  EasyTrack_C.d  EventViewer.cc  GHbase_C.d  GeigerEvent.cc  GeigerEvent.h  Makefile  Plots.C  Plots.h  Plots_C.d  README.html  RawGeigerHit.cc  RawGeigerHit.h  Unpack.cc  Unpack.h  ViewerGui.cc  ctest.cc  drawTracks.C  evdisp.cc  loadfit.C  loadntsh.C  makeplots.C  mapping_anode_only.h  ntsh.C  ntsh.h  ntsh_C.d  plateuScanAnalysis.sh  plotMulti.sh  plotraw  plotraw.cc  plotraw_old.cc  raderr.C  (+2 more)
(+660 files in other folders)
